--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,88 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+
+html,
+body {
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  scroll-behavior: smooth;
+}
+
+li, a {
+  font-weight: 600;
+  color: #003360;
+  text-decoration: none;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 18px 5%;
+}
+
+
+.header-logo {
+  width: 150px;
+}
+
+.nav-links, .nav-icons {
+  list-style: none;
+}
+
+.nav-links li, .nav-icons li {
+  display: inline-block;
+  padding: 0px 10px;
+}
+
+.nav-links li a, .nav-icons li a {
+  transition: all 0.3s ease 0s;
+}
+
+.nav-links li a:hover, .nav-icons li a:hover {
+  color: #0188b3;
+}
+
+.hero-image{
+  padding: 0px;
+  margin: 0px auto;
+  height: 90vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(https://cdn.shopify.com/s/files/1/0456/6820/4706/files/Portada.png?v=1613610661);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: x-large;
+  text-shadow: 1px 1px 5px black;
+}
+
+.hero-text button{
+  margin-top: 18px;
+}
+
+button{
+  border: 0px;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  color: white;
+  background-color: #0188b3;
+  padding: 10px 30px;
+}
+
