--- a/styles/Bestsellers.module.css
+++ b/styles/Bestsellers.module.css
@@ -1,6 +1,22 @@
-.productsContainer{
-    margin: 0px;
+.bestsellers_section{
+    margin: 70px 0px;
     padding: 0px;
+}
+
+.section_title{
+    text-align: center;
+    margin: 30px 0px 30px 0px;
+}
+
+.section_title h3 {
+    font-size: 28px;
+    color: #003360;
+    letter-spacing: 1px;
+}
+
+.productsContainer{
+    display: flex;
+    width: 80%;
 }
 
 .productsContainer a {
@@ -8,9 +24,11 @@
 }
 
 .productContainer{
-    width: 280px;
     box-shadow: 2px 2px 30px rgba(0,0,0,0.2);
     border-radius: 10px;
+    margin: 1%;
+    flex-grow: 1;
+    flex-basis: 23%;
     overflow: hidden;
 }
 
@@ -46,7 +64,7 @@
     transform: translate(-50%,-50%);
     width: 100%;
     height: 100%;
-    background-color: rgba(88, 166, 255, 0.459);
+    background-color: rgba(255, 255, 255, 0.116);
     display: flex;
     justify-content: center;
     align-items: center;
