--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,10 @@ header {
   position: relative;
 }
 
+.logo_container:hover {
+  cursor: pointer;
+}
+
 .logo_container img {
   position: absolute;
   left: 50%;
@@ -78,14 +82,15 @@ header {
 
 .nav-links li a:hover, .nav-icons li a:hover {
   color: #0188b3;
+  cursor: pointer;
 }
 
 .hero-image{
   padding: 0px;
   margin: 0px auto;
-  height: 90vh;
+  height: 75vh;
   width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(https://cdn.shopify.com/s/files/1/0456/6820/4706/files/Portada.png?v=1613610661);
+  background-image: url(https://cdn.shopify.com/s/files/1/0456/6820/4706/files/banner3.png?v=1619017178);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -101,6 +106,7 @@ header {
   color: white;
   font-size: x-large;
   text-shadow: 1px 1px 5px black;
+  display: none;
 }
 
 .hero-text button{
@@ -108,13 +114,19 @@ header {
 }
 
 button{
-  border: 0px;
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: 600;
   font-size: 16px;
+  border-radius: 10px;
   color: white;
   background-color: #0188b3;
+  border: 4px solid #0188b3;
   padding: 10px 30px;
+  transition: all 0.3s ease 0s;
 }
 
+button:hover {
+  background-color: #ffffff;
+  color: #0188b3;
+}
