--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,7 @@ header {
   align-items: center;
   padding: 25px 0px;
   text-align: center;
+  border-bottom: 1px solid #e9e9e9;
 }
 
 .logo_container {
