Homepage Responsive Design

--- a/styles/Bestsellers.module.css
+++ b/styles/Bestsellers.module.css
@@ -15,8 +15,10 @@
 }
 
 .productsContainer{
-    display: flex;
     width: 85%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
 }
 
 .productsContainer a {
@@ -28,7 +30,6 @@
     border-radius: 10px;
     margin: 1%;
     flex-grow: 1;
-    flex-basis: 23%;
     overflow: hidden;
 }
 
@@ -57,6 +58,14 @@
     flex-direction: column;
 }
 
+.type h4{
+    color: #003360;
+}
+
+.price{
+    color: #003360;
+}
+
 .type span{
     color: rgba(96, 132, 167, 0.714);
 }
@@ -83,6 +92,7 @@
     align-items: center;
     background-color: #ffffff;
     color: #003360;
+    font-weight: 600;
     letter-spacing: 1px;
     border-radius: 10px;
     box-shadow: 2px 2px 30px rgba(0,0,0,0.2);
@@ -105,5 +115,23 @@
     }
     100%{
         opacity: 1;
+    }
+}
+
+@media (max-width: 648px) {
+    .productsContainer{
+        width: 90%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-gap: 5px;
+    }
+    .productImg{
+        height: 250px;
+    }
+    .productInfo{
+        display: block;
+    }
+    .type{
+        margin-bottom: 5px;
     }
 }
