--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,28 +13,28 @@ body {
   scroll-behavior: smooth;
 }
 
-li, a {
-  font-weight: 600;
+nav{
+  padding: 15px 15px;
+  background: #ffffff;
+}
+
+nav a {
   color: #003360;
-  text-decoration: none;
+  text-decoration: none; 
 }
 
-header {
-  display: flex;
-  justify-content:space-between;
-  align-items: center;
-  padding: 25px 0px;
-  text-align: center;
-  border-bottom: 1px solid #e9e9e9;
+.menu,
+.submenu{
+    list-style: none;
 }
 
-.logo_container {
-  width: 25%;
+.logo{
+    padding: 2vh 0;
+    width: 180px;
+}
+
+.logo_container{
   position: relative;
-}
-
-.logo_container:hover {
-  cursor: pointer;
 }
 
 .logo_container img {
@@ -44,47 +44,101 @@ header {
   transform: translate(-50%, -50%);
 }
 
-.nav_container{
-  width: 50%;
+.item{
+  font-weight: 600;
 }
 
-.icons_container{
-  width: 25%;
+.item:not(.btn, .icon_section){
+    padding: 10px;
 }
 
-.header-logo {
-  width: 180px;
+.item a:hover,
+.item a:hover::after{
+  color: #0188b3;
 }
 
-.icon-item {
+.menu{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu li:not(.btn) a{
+  display: block;
+  padding: 10px 5px;
+}
+
+.menu li.subitem a{
+  padding: 15px;
+}
+
+
+.nav_container_active{
+  display: block;
+}
+
+.nav_container_innactive{
+  display: none;
+}
+
+.icon_list{
+  display: inline-block;
+  list-style: none;
+}
+
+.item.icon_section{
+  order: 1;
+  float: right;
+}
+
+.toggle{
+  order: 2;
+}
+
+.item:not(.icon_section){
+  order: 3;
+  width: 100%;
+  text-align: center; 
+}
+
+
+.item.icon_section{
+  display: flex;  
+}
+
+.icon_container,
+.has_submenu{
   position: relative;
-  margin: 0px 8px;
+  padding: 0px 0px 0px 30px;
 }
 
-.icon {
+.icon{
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 }
 
-.nav-links, .nav-icons {
-  list-style: none;
+.arrow_icon{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(160%, -50%);
 }
 
-.nav-links li, .nav-icons li {
-  display: inline-block;
-  padding: 0px 10px;
+.active .item {
+  display: block;
 }
 
-.nav-links li a, .nav-icons li a {
-  transition: all 0.3s ease 0s;
+.submenu {
+  display: none;
 }
 
-.nav-links li a:hover, .nav-icons li a:hover {
-  color: #0188b3;
-  cursor: pointer;
+.submenu_active .submenu{
+  display: block;
 }
+
 
 .hero-image{
   padding: 0px;
@@ -130,4 +184,55 @@ button{
 button:hover {
   background-color: #ffffff;
   color: #0188b3;
+}
+
+@media(min-width: 1120px){
+  nav{
+    padding: 0px 4%;
+  }
+  .menu{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  ul{
+    display: inline-block;
+  }
+  .item.icon_section{
+    order: 3;
+    width: 15%;
+    justify-content: flex-end;
+  }
+  
+  .item:not(.icon_section){
+    order: 1;
+  }
+
+  .item:not(.icon_section){
+    order: 3;
+    width: initial;
+    text-align: center; 
+  }
+
+  .nav_container_active{
+    display: flex;
+    width: 60%;
+  }
+
+  .nav_container_innactive{
+    display: flex;
+    width: 60%;
+  }
+  
+  .menu_options{
+    display: none;
+  }
+
+  .logo{
+    width: 15%;
+  }
+  .logo_container,
+  .logo_container img{
+    width: 90%;
+  }
+  
 }
