--- a/styles/Bestsellers.module.css
+++ b/styles/Bestsellers.module.css
@@ -15,7 +15,8 @@
 }
 
 .productsContainer{
-    width: 85%;
+    width: 100%;
+    padding: 0px 8%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
@@ -120,7 +121,8 @@
 
 @media (max-width: 648px) {
     .productsContainer{
-        width: 90%;
+        width: 100%;
+        padding: 0px 5%;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
         grid-gap: 5px;
